@@ -5180,7 +5180,7 @@ struct CommonNodeFinder {
       }
     }
     possibleNodes.clear();
-    return (!commonName.empty());
+    return false;
   }
 };
 
